Toevoegen van checkdate and notIn functies samen met een beetje security(nog niet af)

--- a/public/carousel.css
+++ b/public/carousel.css
@@ -10,6 +10,19 @@
     background-color: #563d7c!important;
 }
 
+.active-red:before{
+    content: "";
+    position:absolute;
+    top: 0;
+    left: 100%;
+    width: 5%;
+    height: 100%;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0 5px 5px 0;
+    background-color: #dc3545;
+    color: white;
+}
+
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
