--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -4,14 +4,16 @@
 
 {% block body %}
 
-        <div class="col-md-10">
-            <div class="card">
-                <div class="card-header">{% block main_header_content %}{% endblock %}</div>
-                <div class="card-body overflow-auto {% block main_body_classes %}{% endblock %}">
-                    {% block main_body_content %}{% endblock %}
-                </div>
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-header text-danger">
+                {% block main_header_content %}{% endblock %}
+            </div>
+            <div class="card-body overflow-auto {% block main_body_classes %}{% endblock %}">
+                {% block main_body_content %}{% endblock %}
             </div>
         </div>
+    </div>
 
     </div>
 {% endblock %}
