--- a/templates/bundles/FOSUserBundle/Profile/edit_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/edit_content.html.twig
@@ -1,8 +1,13 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+<div class="login-card-light p-3 shadow-lg rounded-lg">
+    <div class="pt-3">
+        <h2 class="text-danger">Profile</h2>
+    </div>
 {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
     {{ form_widget(form) }}
     <div>
         <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
+</div>
