--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -1,8 +1,15 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+<div class="login-card-light p-3 shadow-lg rounded-lg">
+    <div class="pt-3">
+        <h2 class="text-danger">Sign Up</h2>
     </div>
-{{ form_end(form) }}
+    {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
+    {{ form_widget(form) }}
+    <div class="mt-5">
+        <div>
+            <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-sm btn-danger col" />
+        </div>
+    </div>
+    {{ form_end(form) }}
+</div>
